--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Lakshita Pillay | Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -17,27 +17,22 @@
     <div class="container">  
     <nav class="navbar navbar-expand-sm fixed-top">
           <div class="container">
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-              <span class="navbar-toggler-icon">
-                  <i class="fa fa-navicon"></i>
-              </span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div>
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                  <a href="#home" class="nav-link mx-5">Home</a>
+                  <a href="#home" class="nav-link mx-2">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#about" class="nav-link mx-5">About</a>
+                  <a href="#about" class="nav-link mx-2">About</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#projects" class="nav-link mx-5">Projects</a>
+                  <a href="#projects" class="nav-link mx-2">Projects</a>
                 </li>       
                 <li class="nav-item">
-                  <a href="#skills" class="nav-link mx-5">Skills</a>
+                  <a href="#skills" class="nav-link mx-2">Skills</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#contact" class="nav-link mx-5">Contact</a>
+                  <a href="#contact" class="nav-link mx-2">Contact</a>
                 </li>                                
               </ul>
             </div>
