removed dummy text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="background-color:#f6f5f3; padding-bottom:50px;">
   
 
-  <div class="container">
+  <div class="container px-0">
     <div class="container">  
     <nav class="navbar navbar-expand-sm fixed-top">
           <div class="container">
@@ -62,19 +62,37 @@
         <div class="row py-5 px-3 mb-5 border-bottom border-secondary rounded">
             <div class="col-md-6 dev mx-auto rounded"></div>
             <div class="col-md-6 container py-3 text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore asperiores quis officiis debitis possimus amet ex ratione quasi aspernatur facere nam laudantium fugit ipsa cumque rerum obcaecati voluptatibus, maiores dolorem.
+                <p class="h4 pb-2">Full stack social network app using MongoDB, Node.js, Express.js, React.js and Bootstrap 4 </p>
+                <p>Extensive API using Express.js, Stateless JWT for authentication</p>
+                <p>Integrated React with Express backend</p>
+                <p><a class="font-italic text-secondary" href="https://github.com/lakshitapillay/devconnector">Code</a></p>
             </div>
         </div>
         <div class="row py-5 px-3 mb-5 border-bottom border-secondary rounded">
-            <div class="col-md-6 container py-3 text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero a vel commodi! Aliquid fuga, voluptatibus laboriosam repudiandae repellendus quia, voluptatum hic error quis recusandae reiciendis veniam fugiat, officia similique cupiditate?</div>
+            <div class="col-md-6 container py-3 text">
+              <p class="h4 pb-2">Personal blog using SQLite, Django and Bootstrap 4</p>
+              <p>Built URL patterns and views using Django for backend </p>
+              <p>Used Inbuilt Django admin site for authenticating access to features in the website</p>
+              <p><a class="font-italic text-secondary" href="https://github.com/lakshitapillay/personal_blog">Code</a></p>
+            </div>
             <div class="col-md-6 blog mx-auto rounded"></div>
         </div>
         <div class="row py-5 px-3 mb-5 border-bottom border-secondary rounded">
             <div class="col-md-6 js mx-auto rounded"></div>
-            <div class="col-md-6 container py-3 text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis doloremque, nesciunt ad voluptatum laboriosam nostrum unde ab perferendis sit! Voluptatum odit rem natus doloremque quibusdam accusantium ex earum quas quis.</div>
+            <div class="col-md-6 container py-3 text">
+              <p class="h4 pb-2">JavaScript Applications</p>
+              <p>Created simple applications using Vanilla JS and Bootstrap 4 like weight converter app, bookmarker app that accesses the local storage, multistage user forms, etc. </p>
+              <p class="mb-0"><a class="font-italic text-secondary" href="https://github.com/lakshitapillay/weightconverterapp">Code for weightconverter app</a></p>
+              <p><a class="font-italic text-secondary" href="https://github.com/lakshitapillay/bookmarkerapp">Code for bookmarker app</a></p>
+            </div>
         </div>
         <div class="row py-5 px-3 mb-5 border-bottom border-secondary rounded">
-            <div class="col-md-6 container py-3 text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, unde illo quae modi dignissimos magni voluptatum suscipit velit voluptatem vitae? Quasi doloribus eveniet nisi vitae unde sapiente maxime ullam facere?</div>
+            <div class="col-md-6 container py-3 text">
+              <p class="h4 pb-2">Bootstrap UIs</p>
+              <p>Responsive Content Management System Admin UI containing home page, posts, edit posts, logout, etc. using Bootstrap </p>
+              <p>Portfolio website using Bootstrap and CSS</p>
+              <p><a class="font-italics text-secondary" href="https://github.com/lakshitapillay/lakshitapillay.github.io">Code for portfolio website</a></p>
+            </div>
             <div class="col-md-6 cms mx-auto rounded"></div>
         </div>
       </div>
@@ -104,9 +122,9 @@
       <div class="container">
         <div class="header mb-5">Contact Me</div>
         <div class="row py-5 px-3 mb-5">
-            <div class="col-md-4 text-center"><a href=""><i class="fab fa-github fa-5x"></i></a></div>
-            <div class="col-md-4 text-center"><a href=""><i class="fas fa-envelope fa-5x"></i></a></div>
-            <div class="col-md-4 text-center"><a href=""><i class="fab fa-linkedin-in fa-5x"></i></a></div> 
+            <div class="col-md-4 text-center pb-4"><a href=""><i class="fab fa-github fa-5x"></i></a></div>
+            <div class="col-md-4 text-center pb-4"><a href=""><i class="fas fa-envelope fa-5x"></i></a></div>
+            <div class="col-md-4 text-center pb-4"><a href=""><i class="fab fa-linkedin-in fa-5x"></i></a></div> 
         </div>   
       </div>
     </section>
