changed dummy text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible"  content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lakshita Pillay | Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -39,7 +39,7 @@
           </div>
         </nav>
     </div>
-     <div class="box container" id="home">
+     <div class="container" id="home">
             <h1>Lakshita Pillay</h1>
     </div>
     <section id="about">
@@ -91,7 +91,7 @@
               <p class="h4 pb-2">Bootstrap UIs</p>
               <p>Responsive Content Management System Admin UI containing home page, posts, edit posts, logout, etc. using Bootstrap </p>
               <p>Portfolio website using Bootstrap and CSS</p>
-              <p><a class="font-italics text-secondary" href="https://github.com/lakshitapillay/lakshitapillay.github.io">Code for portfolio website</a></p>
+              <p><a class="font-italic text-secondary" href="https://github.com/lakshitapillay/lakshitapillay.github.io">Code for portfolio website</a></p>
             </div>
             <div class="col-md-6 cms mx-auto rounded"></div>
         </div>
