--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="col-md-6 px-auto">
                 <div class="header py-3">About Me</div>
-                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non temporibus voluptatum voluptates doloremque, perspiciatis nam provident dolor iure. Laborum nisi fuga eum voluptate hic asperiores sint velit architecto praesentium minus.</p>
+                <p class="text-center">Hey there! I'm Lakshita Pillay. Passionate about creating beautiful websites by using new UI tools. I started developing because I have always been into art and coding which lead me down this path! Feel free to contact me on any of my social media.</p>
             </div>
         </div>
       </div>
@@ -102,12 +102,12 @@
         <div class="container border-bottom border-secondary py-5 px-3 mb-3 text-center">
             <div class="h2 my-5 pl-4 text-center" style="color:rgb(99, 99, 99); ">Web Tools</div>
             <ul class="skills list-inline">
-                <li class="list-inline-item">ReactJs</li>
-                <li class="list-inline-item">NodeJs</li>
-                <li class="list-inline-item">Django</li>
-                <li class="list-inline-item">JavaScript</li>
-                <li class="list-inline-item">CSS3</li>
-                <li class="list-inline-item">HTML5</li>
+                <li class="px-3 list-inline-item">ReactJs</li>
+                <li class="px-3 list-inline-item">NodeJs</li>
+                <li class="px-3 list-inline-item">Django</li>
+                <li class="px-3 list-inline-item">JavaScript</li>
+                <li class="px-3 list-inline-item">CSS3</li>
+                <li class="px-3 list-inline-item">HTML5</li>
             </ul>
         </div>
         <div class="container py-5 px-3 text-center">
