--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
       <div class="container">
         <div class="header mb-5">Contact Me</div>
         <div class="row py-5 px-3 mb-5">
-            <div class="col-md-4 text-center pb-4"><a href=""><i class="fab fa-github fa-5x"></i></a></div>
-            <div class="col-md-4 text-center pb-4"><a href=""><i class="fas fa-envelope fa-5x"></i></a></div>
-            <div class="col-md-4 text-center pb-4"><a href=""><i class="fab fa-linkedin-in fa-5x"></i></a></div> 
+            <div class="col-md-4 text-center pb-4"><a href="https://github.com/lakshitapillay"><i class="fab fa-github fa-5x"></i></a></div>
+            <div class="col-md-4 text-center pb-4"><a href=""><i class="fas fa-envelope fa-5x"></i><p>pillaylakshita@gmail.com</p></a></div>
+            <div class="col-md-4 text-center pb-4"><a href="https://www.linkedin.com/in/lakshitapillay/"><i class="fab fa-linkedin-in fa-5x"></i></a></div> 
         </div>   
       </div>
     </section>
